compiler/tools/fpp-check/test/component_instance_def/passive_priority.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/component_instance_def/passive_priority.fpp: 5.38
instance c: C base id 0x100 priority 10
                                     ^
error: invalid component instance definition c: passive component may not have priority
